examples/test/testpolicy5957.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5957
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key31: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value18
          key31: value38
          key3: value40
      podSelector:
        matchLabels:
          key16: value37
